--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <ul>
                 <li><a href="#about">소개</a></li>
+                <li><a href="#skills">능력</a></li>
                 <li><a href="#projects">프로젝트</a></li>
                 <li><a href="#contact">연락처</a></li>
             </ul>
@@ -29,21 +30,22 @@
         <h2>소개</h2>
         <p>안녕하세요! 저는 아름답고 상호작용이 가능한 웹 경험을 만드는 웹 개발자입니다.</p>
     </section>
-    
+
+    <section id="skills">
+        <h2>능력</h2>
+        <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>프론트엔드 프레임워크: React, Vue.js</li>
+            <li>백엔드 기술: Node.js, Express</li>
+            <li>데이터베이스: MySQL, MongoDB</li>
+            <li>버전 관리: Git, GitHub</li>
+            <li>UI/UX 디자인</li>
+        </ul>
+    </section>
+
     <section id="projects">
         <h2>프로젝트</h2>
-        <div class="project-gallery">
-            <div class="project-card">
-                <img src="assets/images/project1.jpg" alt="프로젝트 1">
-                <h3>프로젝트 제목 1</h3>
-                <p>프로젝트 설명이 여기에 들어갑니다.</p>
-            </div>
-            <div class="project-card">
-                <img src="assets/images/project2.jpg" alt="프로젝트 2">
-                <h3>프로젝트 제목 2</h3>
-                <p>프로젝트 설명이 여기에 들어갑니다.</p>
-            </div>
-        </div>
+        <p>현재 진행 중인 프로젝트가 없습니다. 새로운 프로젝트를 준비 중입니다.</p>
     </section>
 
     <section id="contact">
@@ -54,6 +56,9 @@
     
     <footer>
         <p>© 2024 나의 포트폴리오</p>
+        <div class="footer-contact">
+            <p>전화번호: 010-2352-9096 | 이메일: <a href="mailto:kms020408@gmail.com">kms020408@gmail.com</a></p>
+        </div>
         <div class="social-icons">
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
