--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 포트폴리오</title>
+    <title>김민석 포트폴리오</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
                 <li><a href="#about">소개</a></li>
                 <li><a href="#skills">능력</a></li>
                 <li><a href="#projects">프로젝트</a></li>
+                <li><a href="#resume">이력</a></li>
                 <li><a href="#contact">연락처</a></li>
             </ul>
         </nav>
@@ -20,7 +21,7 @@
     
     <section id="main-banner">
         <div class="overlay">
-            <h1>나의 포트폴리오에 오신 것을 환영합니다</h1>
+            <h1>김민석의 포트폴리오에 오신 것을 환영합니다</h1>
             <p>저의 프로젝트와 기술을 탐험해 보세요</p>
             <a href="#projects" class="btn">프로젝트 보기</a>
         </div>
@@ -33,19 +34,50 @@
 
     <section id="skills">
         <h2>능력</h2>
-        <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>프론트엔드 프레임워크: React, Vue.js</li>
-            <li>백엔드 기술: Node.js, Express</li>
-            <li>데이터베이스: MySQL, MongoDB</li>
-            <li>버전 관리: Git, GitHub</li>
-            <li>UI/UX 디자인</li>
-        </ul>
+        <div class="skill-bar">
+            <label>C#</label>
+            <div class="bar">
+                <div class="progress" style="width: 55%;">55%</div>
+            </div>
+        </div>
+        <div class="skill-bar">
+            <label>Java</label>
+            <div class="bar">
+                <div class="progress" style="width: 65%;">65%</div>
+            </div>
+        </div>
+        <div class="skill-bar">
+            <label>PHP</label>
+            <div class="bar">
+                <div class="progress" style="width: 50%;">50%</div>
+            </div>
+        </div>
+        <div class="skill-bar">
+            <label>HTML</label>
+            <div class="bar">
+                <div class="progress" style="width: 70%;">70%</div>
+            </div>
+        </div>
     </section>
 
     <section id="projects">
         <h2>프로젝트</h2>
         <p>현재 진행 중인 프로젝트가 없습니다. 새로운 프로젝트를 준비 중입니다.</p>
+    </section>
+
+    <section id="resume">
+        <h2>이력</h2>
+        <div class="resume-container">
+            <div class="photo">
+                <img src="assets/images/myphoto.jpg" alt="김민석 사진">
+            </div>
+            <div class="details">
+                <p><strong>이름:</strong> 김민석</p>
+                <p><strong>생년월일:</strong> 2002년 4월 8일</p>
+                <p><strong>주소:</strong> 김해시 월산로 151 404동 1502호</p>
+                <p><strong>이메일:</strong> <a href="mailto:kms020408@gmail.com">kms020408@gmail.com</a></p>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
@@ -55,7 +87,7 @@
     </section>
     
     <footer>
-        <p>© 2024 나의 포트폴리오</p>
+        <p>© 2024 김민석 포트폴리오</p>
         <div class="footer-contact">
             <p>전화번호: 010-2352-9096 | 이메일: <a href="mailto:kms020408@gmail.com">kms020408@gmail.com</a></p>
         </div>
