--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
                 <li><a href="#skills">능력</a></li>
                 <li><a href="#projects">프로젝트</a></li>
                 <li><a href="#resume">이력</a></li>
-                <li><a href="#contact">연락처</a></li>
             </ul>
         </nav>
     </header>
@@ -34,30 +33,12 @@
 
     <section id="skills">
         <h2>능력</h2>
-        <div class="skill-bar">
-            <label>C#</label>
-            <div class="bar">
-                <div class="progress" style="width: 55%;">55%</div>
-            </div>
-        </div>
-        <div class="skill-bar">
-            <label>Java</label>
-            <div class="bar">
-                <div class="progress" style="width: 65%;">65%</div>
-            </div>
-        </div>
-        <div class="skill-bar">
-            <label>PHP</label>
-            <div class="bar">
-                <div class="progress" style="width: 50%;">50%</div>
-            </div>
-        </div>
-        <div class="skill-bar">
-            <label>HTML</label>
-            <div class="bar">
-                <div class="progress" style="width: 70%;">70%</div>
-            </div>
-        </div>
+        <ul>
+            <li>C# (55%)</li>
+            <li>Java (65%)</li>
+            <li>PHP (50%)</li>
+            <li>HTML (70%)</li>
+        </ul>
     </section>
 
     <section id="projects">
@@ -78,12 +59,6 @@
                 <p><strong>이메일:</strong> <a href="mailto:kms020408@gmail.com">kms020408@gmail.com</a></p>
             </div>
         </div>
-    </section>
-
-    <section id="contact">
-        <h2>연락처</h2>
-        <p>전화번호: 010-2352-9096</p>
-        <p>이메일: <a href="mailto:kms020408@gmail.com">kms020408@gmail.com</a></p>
     </section>
     
     <footer>
