--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <section id="skills" class="slide-in">
         <h2>능력</h2>
         <ul>
-            <li>C#</li>
-            <li>Java</li>
-            <li>PHP</li>
-            <li>HTML</li>
+            <li>C#: 55%</li>
+            <li>Java: 65%</li>
+            <li>PHP: 50%</li>
+            <li>HTML: 70%</li>
         </ul>
-    </section>
+    </section>    
 
     <section id="projects" class="fade-in">
         <h2>프로젝트</h2>
