--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     </header>
 
     <section id="main-banner">
-        <div class="overlay">
-            <h1>김민석의 포트폴리오에 오신 것을 환영합니다</h1>
-            <p>저의 프로젝트와 기술을 탐험해 보세요</p>
-            <a href="#projects" class="btn scroll-link">프로젝트 보기</a>
+        <div class="banner-content">
+            <div class="banner-text">
+                <h1>김민석의 포트폴리오</h1>
+            </div>
+            <div class="banner-character">
+                <img src="assets/images/game-character-pixel.png" alt="게임 캐릭터">
+            </div>
         </div>
     </section>
-
+    
     <section id="about" class="fade-in">
         <h2>소개</h2>
         <p>안녕하세요! 저는 아름답고 상호작용이 가능한 웹 경험을 만드는 웹 개발자입니다.</p>
